# antrobot_ros

./: .gitignore  Dockerfile  README-RPI4.md  README-RPICAM-V3.md  README.md  compose.yaml  entrypoint.sh  package.xml  setup.py  setup_source_dependecies.sh
antrobot_ros/: explore_lite_map_converter.py  joint_state_estimator_node.py  keyboard_teleoperation_node.py  laserscan_to_pointcloud_node.py  odom_eval_node.py  odom_monitor.py  rdrive.py  rdrive_disable.py  rdrive_node.py  utils.py
config/: antrobot.rviz  antrobot_cartographer_2d.lua  antrobot_cartographer_kiss_2d.lua  antrobot_params.yaml  explore_lite_params.yaml  keyboard_teleoperation_params.yaml  kinematic_icp_params.yaml  kiss_icp.rviz  nav2_params.yaml  odom_eval_params.yaml  odom_monitor_params.yaml  rviz_preliminary_config.rviz
docs/: odom_monitoring.md
launch/: antrobot.launch.py  cartographer.launch.py  explore_lite.launch.py  joint_state_estimator.launch.py  keyboard_teleoperation.launch.py  kinematic_icp.launch.py  kiss_icp.launch.py  kiss_icp_rviz.launch.py  laserscan_to_pointcloud.launch.py  nav2.launch.py  odom_eval.launch.py  odom_monitor.launch.py  rdrive.launch.py  robot_state.launch.py  rplidar.launch.py  rviz.launch.py  tf_static_link.launch.py
maps/: map.pgm
scripts/: __init__.py
scripts/diagnostic/: __init__.py  quick_odom_monitor.py  tf_timing_capture.py  tf_timing_diagnostic.py
scripts/evaluation/odom/: README.md  odom_eval_analysis.sh
